fix images changing position when toggling light/dark mode
thx @shilangyu

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ img[src^="/assets/img/dark"] {
   display: none;
 }
 
+img[src^="/assets/img/light"] {
+  display: inherit;
+}
+
 @media (prefers-color-scheme: dark) {
   img[src^="/assets/img/dark"] {
     display: inherit;
